# OCR_doc_intelligence

./: README.md  app.py  contract.html  db.txt  extracted.json  extraction.py  index.html  main.js  pyproject.toml  requirements.txt  saved_data.csv  styles.css
